# betz_experimental

./: .gitignore  CMakeLists.txt  README.md  stm32-toolchain.cmake
blink/: CMakeLists.txt
common/: CMakeLists.txt  rs485.c  startup.c  status_led.c  status_led.h
firmware/: CMakeLists.txt
firmware/app_bldc/: CMakeLists.txt  main.c
firmware/app_blink/: CMakeLists.txt  main.c
firmware/app_test_adc/: CMakeLists.txt  main.c
firmware/app_test_enc/: CMakeLists.txt  main.c
firmware/app_test_pwm/: CMakeLists.txt  main.c
firmware/bootloader/: CMakeLists.txt  bootloader.c
firmware/common/: CMakeLists.txt  adc.c  adc.h  blue_app.ld  blue_bl.ld  bootloader.c  bootloader.h  cog.c  cog.h  comms.c  comms.h  console.c  control.c  control.h  delay.c  enc.c  enc.h  flash.c  flash.h  param.c  param.h  parser.c  parser.h  pin.c  pin.h  pwm.c  pwm.h  rng.c  rng.h  rs485.c  rs485.h  soc.h  stack.h  startup.c  state.c  state.h  status_led.c  status_led.h  stm32f4_vectors.c  stm32g4_vectors.c  (+6 more)
firmware/common/stm32/: stm32f405xx.h  stm32g474xx.h
firmware/emulator/: CMakeLists.txt  README.md  emulator_adc.c  emulator_bootloader.c  emulator_enc.c  emulator_flash.c  emulator_pwm.c  emulator_rng.c  emulator_sys.c  emulator_systime.c  emulator_uuid.c  emulator_uuid.h  main.c  mcast_udp.c  mcast_udp.h  multicast.c  multicast.h
firmware/rs485_hello/: rs485_hello.c
firmware/scripts/: stm32g4_set_single_bank_mode.sh
firmware/test_blink/: CMakeLists.txt  main.c
firmware/test_comms/: CMakeLists.txt
firmware/test_console/: CMakeLists.txt
firmware/test_rng/: CMakeLists.txt  main.c
firmware/test_rs485/: CMakeLists.txt
firmware/test_rs485_comms/: CMakeLists.txt  test_rs485_comms.c
firmware/test_systime/: CMakeLists.txt  main.c  test_systime.c
firmware/test_uuid/: CMakeLists.txt  test_uuid.c
hardware/betz_mini/: FIXME  betz_mini.gvp  betz_mini.kicad_pcb  betz_mini.pro  betz_mini.sch  betz_mini_bom_A.csv  bom.ini  fp-lib-table  sym-lib-table
hardware/betz_mini/doc/: README.md
hardware/betz_mini/fab/: README.txt
hardware/betz_mini/stm32cube/: stm32cube.ioc
hello/: CMakeLists.txt  hello.c
rs485_hello/: CMakeLists.txt
software/ros1/betz/: CMakeLists.txt  betz_node.cpp  betz_node.h  bus.cpp  decog.py  drive.cpp  lightweightserial.cpp  main_window.cpp  main_window.h  mainwindow.ui  package.xml  param.cpp  set_low_latency.sh  transport_multicast.cpp  transport_serial.cpp  uuid.cpp
software/ros1/betz/include/betz/: boot.h  bus.h  cog_write.h  discovery.h  drive.h  flash_read.h  flash_write.h  num_params.h  packet.h  param.h  param_name_value.h  param_set_value.h  param_write_flash.h  reset.h  set_position_target.h  state_poll.h  transport_multicast.h  transport_serial.h
software/ros1/betz/packet/: boot.cpp  cog_write.cpp  crc.cpp  discovery.cpp  flash_read.cpp  flash_write.cpp  num_params.cpp  packet.cpp  param_name_value.cpp  param_set_value.cpp  param_write_flash.cpp  reset.cpp  set_position_target.cpp  state_poll.cpp
software/ros1/betz_node/: CMakeLists.txt  betz_node.cpp  betz_node.h  bus.cpp  bus.h  cli_main.cpp  crc.cpp  crc.h  drive.cpp  drive.h  gui_main.cpp  main.cpp  main_window.cpp  main_window.h  mainwindow.ui  package.xml  packet.cpp  packet.h  param.cpp  param.h  transport.h  transport_multicast.cpp  transport_serial.cpp  uuid.cpp  uuid.h
software/ros1/betz_node/cfg/: Betz.cfg
software/ros1/betz_node/packet/: boot.cpp  boot.h  crc.cpp  discovery.cpp  discovery.h  discovery_request.cpp  discovery_request.h  flash_read.cpp  flash_read.h  flash_write.cpp  flash_write.h  num_params.cpp  num_params.h  packet.cpp  packet.h  param_name.cpp  param_name.h  param_name_value.cpp  param_name_value.h  param_set_value.cpp  param_set_value.h  param_value.cpp  param_value.h  param_write_flash.cpp  param_write_flash.h  read_flash.cpp  read_flash.h  reset.cpp  reset.h  state_poll.cpp  state_poll.h
