<?xml version="1.0"?>
<package>
  <name>betz_node</name>
  <version>0.0.0</version>
  <description>Minimal software package for talking to experimental firmware</description>
  <maintainer email="morgan@osrfoundation.org">Morgan Quigley</maintainer>
  <license>Apache 2.0</license>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <export></export>
</package>
